[tool.poetry]
name = "mira"
version = "1.0.0"
description = ""
authors = ["feserm <feser@ipk-gatersleben.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
litestar = "^2.16.0"
arctrl = "^2.5.1"
fsspreadsheet = "^6.3.1"
python-dotenv = "^1.1.0"
sqlalchemy = "^2.0.40"
uvicorn = "^0.34.2"
aiosqlite = "^0.21.0"
pydantic = "^2.11.4"
polars = "^1.29.0"
python-dateutil = "^2.9.0.post0"


[tool.poetry.group.dev.dependencies]
mkdocs-material = "^9.6.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
